--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,10 @@
             <ul>
                 <li>
                     <div class="card">
+                        <picture>
+                            <source media="(min-width: 380px)" srcset="">
                         <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt="">
+                        </picture>
                         <div class="card-content">
                             <h3 class="card-title">Web Development</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
