--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,9 @@
                 <li>
                     <div class="card">
                         <picture>
-                            <source media="(min-width: 380px)" srcset="">
-                        <img src="https://static.pexels.com/photos/574077/pexels-photo-574077.jpeg" alt="">
+                            <source srcset="../assets/img/sectionB_1_380.jpeg" media="(max-width: 380px)">
+                            <source srcset="../assets/img/sectionB_1.jpeg">
+                            <img src="../assets/img/sectionB_1.jpeg" alt="">
                         </picture>
                         <div class="card-content">
                             <h3 class="card-title">Web Development</h3>
@@ -46,7 +47,11 @@
                 </li>
                 <li>
                     <div class="card">
-                        <img src="https://static.pexels.com/photos/261628/pexels-photo-261628.jpeg" alt="">
+                        <picture>
+                            <source srcset="../assets/img/sectionB_2_380.jpeg" media="(max-width: 380px)">
+                            <source srcset="../assets/img/sectionB_2.jpeg">
+                            <img src="../assets/img/sectionB_2.jpeg" alt="">
+                        </picture>
                         <div class="card-content">
                             <h3 class="card-title">Mobile Applications</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
@@ -56,7 +61,11 @@
                 </li>
                 <li>
                     <div class="card">
-                        <img src="https://static.pexels.com/photos/265087/pexels-photo-265087.jpeg" alt="">
+                        <picture>
+                            <source srcset="../assets/img/sectionB_3_380.jpeg" media="(max-width: 380px)">
+                            <source srcset="../assets/img/sectionB_3.jpeg">
+                            <img src="../assets/img/sectionB_3.jpeg" alt="">
+                        </picture>
                         <div class="card-content">
                             <h3 class="card-title">Tech Marketing</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum culpa neque quo eum et
